fixed the error with wrap class

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,7 +161,7 @@ a {
 }
 
 .flex-wrap {
-    flex-wrap: wrap0;
+    flex-wrap: wrap;
 }
 /* vav */
 
